--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
@@ -44,4 +49,5 @@
   "devDependencies": {
     "cross-env": "^7.0.3"
   }
+
 }
