--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "buffer": "^6.0.3",
     "ethers": "^5.6.9",
     "ipfs-http-client": "^60.0.0",
+    "lucide-react": "^0.279.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -31,7 +32,6 @@
   },
   "browserslist": {
     "production": [
-      
       "chrome >= 67",
       "edge >= 79",
       "firefox >= 68",
@@ -45,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "tailwindcss": "^3.3.3"
   }
-
 }
